--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!doctype html>
 <html>
 	<head>
-		<meta charset="utf8" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Day Fifty Nine | Hack Terminal">
+    <meta name="author" content="Kabir Shah">
+    
 		<title>Hack Terminal</title>
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
